--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,5 +1,10 @@
 opustags
 
+1.2.0 "hybrid"
+
+hybrid opustags/opus-tools
+add picture option (add cover)
+
 1.1.3 "restruct"
 
 restruct for opus-tools
