--- a/doc/opustags.1
+++ b/doc/opustags.1
@@ -1,4 +1,4 @@
-.TH OpusTags 1 "30 Oct 2018" "1.2.1" "User Manual"
+.TH OpusTags 1 "31 Oct 2018" "1.2.2" "User Manual"
 .SH NAME
 opustags \- Opus comment editor
 .SH SYNOPSIS
@@ -116,7 +116,7 @@ see opusenc of opus-tools
 cat in.opustags | opustags -S -p cover -o out.opus source.opus
 .TP
 \- in.opustags
-< 256strings ,< 16383b
+see doc (file: TAG=VALUE)
 .TP
 \- cover
 JPEG, PNG, GIF
