--- a/doc/opustags.1
+++ b/doc/opustags.1
@@ -1,4 +1,4 @@
-.TH OpusTags 1 "31 Oct 2018" "1.2.2" "User Manual"
+.TH OpusTags 1 "7 Mar 2019" "1.3.1" "User Manual"
 .SH NAME
 opustags \- Opus comment editor
 .SH SYNOPSIS
@@ -124,6 +124,7 @@ JPEG, PNG, GIF
 \- source.opus
 see opusenc of opus-tools
 .SH SEE ALSO
+.BR opuspic2tag (1),
 .BR opusenc (1),
 .BR vorbiscomment (1),
 .BR sed (1)
