--- a/doc/opuspic2tag.1
+++ b/doc/opuspic2tag.1
@@ -1,4 +1,4 @@
-.TH OpusPic2Tag 1 "7 Mar 2019" "1.3.1" "User Manual"
+.TH OpusPic2Tag 1 "26 Jul 2022" "1.3.2" "User Manual"
 .SH NAME
 opuspic2tag \- Convert picture to opus tag
 .SH SYNOPSIS
@@ -12,6 +12,12 @@ opuspic2tag \- Convert picture to opus tag
 .TP
 .B \-h, \-\-help
 Display a brief description of the options.
+.TP
+.B \-d, \-\-desc \fISTRING\fI
+description picture
+.TP
+.B \-t, \-\-type NUM
+set image type by 0-20 or keywords, default=3
 .TP
 .B \-o, \-\-output \fIFILE\fI
 Output text file.
