--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,6 +1,10 @@
 opustags
 https://github.com/zvezdochiot/opustags [fork](https://github.com/fmang/opustags)
 
+1.3.2 "convert" <zvezdochiot>
+
+added description and type for picture
+
 1.3.1 "convert" <zvezdochiot>
 
 added tool for convert picture to tag
